# StellarRoute

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  gas-benchmarks.yml
config/: risk-limits.json
crates/api/: Cargo.toml
crates/indexer/: Cargo.toml
crates/routing/: Cargo.toml
crates/routing/benches/: hybrid_optimizer_benchmarks.rs
crates/routing/src/: error.rs  fixtures.rs  lib.rs  normalization.rs  optimizer.rs  pathfinder.rs  risk.rs  simulator.rs
crates/routing/src/health/: anomaly.rs  circuit_breaker.rs  filter.rs  mod.rs  policy.rs  scorer.rs
crates/routing/tests/: anomaly_tests.rs  graph_fixtures_integration.rs  hybrid_optimizer_tests.rs  risk_limits_integration.rs
crates/sdk-rust/: README.md
docs/: README.md  incident-replay-workflow.md  monitoring.md
docs/api/: openapi.yaml
docs/architecture/: database-schema.md
docs/contracts/: router-interface.md
docs/deployment/: tracing-troubleshooting.md
docs/sdk-js/: README.md
frontend/: STORYBOOK.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
frontend/__mocks__/: lucide-react.tsx
frontend/app/: globals.css  page.tsx
frontend/components/: DemoSwap.tsx  Header.tsx  TransactionHistory.test.tsx  TransactionHistory.tsx
frontend/hooks/: useApi.ts  useCopyToClipboard.ts  useFocusTrap.ts  useOnlineStatus.test.ts  useOnlineStatus.ts  useQuote.ts  useQuoteRefresh.test.ts  useQuoteRefresh.ts  useSwapState.ts  useTradeFormStorage.ts  useTransactionLifecycle.ts  useWallet.ts
sdk-js/: tsconfig.json  typedoc.json
(+184 files in other folders)
